# fastapi-example

./: .buildinfo  .envrc.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  DATA.md  Makefile  README.md  alembic.ini  app.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  server.py
.doctrees/: app.doctree  environment.pickle  index.doctree
.github/: labeler.yaml
.github/workflows/: container.yaml  deployment.yaml  docs.yaml  json.yaml  pr.yaml  python.yaml  test.yaml  validate.yaml  yaml.yaml
_sources/: index.rst.txt
app/: config.py  db.py  dbrel.py  main.py  validators.py
app/scripts/: load_data.py
app/space_agencies/: api.py  crud.py  dbrel.py  models.py
container/: Containerfile  docker-compose.yml  entrypoint.sh
container/dbscripts/: postgres-bootstrap.sql
deploy/: README.md
deploy/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
deploy/dev/: kustomization.yaml  patch-deployment.yaml  patch-service.yaml  secret.enc.yaml
deploy/production/: kustomization.yaml  secret.enc.yaml
deploy/staging/: docker-secret.enc.yaml  kustomization.yaml  patch-deployment.yaml  postgres-deployment.yaml  secret.enc.yaml
docs/: app.rst  conf.py
fixtures/: launching_sites.json  satellites.json  space_agencies.json
migrations/: env.py
migrations/versions/: 0a9e36da2fc7_new_space_agencies_model.py  716fb76750ec_empty_init.py
scripts/: pre-commit-hook.sh  validate.sh
tests/: conftest.py  initialize.py  test_main.py  test_validators.py
(+4 files in other folders)
