[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning"
]

python_files = "test_*.py"

[tool.poetry]
name = "fastapi-example"
version = "1.0.0"
description = "A template to bootstrap FastAPI services that make use of PostgreSQL"
authors = ["Darío Blanco Iturriaga"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.11"

alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
sqlalchemy = "^2.0.18"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.22.0"

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.19.0"
black = "^23.7.0"
httpx = "^0.24.1"
ipdb = "^0.13.13"
ipython = "^8.14.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.3"

[tool.pytest]
